--- a/rabbit-mq/UI/UI.csproj
+++ b/rabbit-mq/UI/UI.csproj
@@ -9,19 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Resources\event.txt" />
-    <None Remove="Resources\parameter.txt" />
-    <None Remove="Resources\performance.txt" />
-    <None Remove="Resources\transfer.txt" />
-    <None Remove="Resources\worker.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\event.txt" />
-    <EmbeddedResource Include="Resources\parameter.txt" />
-    <EmbeddedResource Include="Resources\performance.txt" />
-    <EmbeddedResource Include="Resources\transfer.txt" />
-    <EmbeddedResource Include="Resources\worker.png" />
+    <Compile Remove="Resources\**" />
+    <EmbeddedResource Remove="Resources\**" />
+    <None Remove="Resources\**" />
   </ItemGroup>
 
   <ItemGroup>
