--- a/dotnet/blazor/game/game/game/game.csproj
+++ b/dotnet/blazor/game/game/game/game.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\entities\entities.csproj" />
     <ProjectReference Include="..\game.Client\game.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.9" />
   </ItemGroup>
