--- a/dotnet/aspire/aspire.AppHost/aspire.AppHost.csproj
+++ b/dotnet/aspire/aspire.AppHost/aspire.AppHost.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\aspire.Web\aspire.Web.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Aspire.Hosting.Docker" Version="13.1.0-preview.1.25616.3" />
+  </ItemGroup>
+
 </Project>
